--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
   "bugs": {
     "url": "https://github.com/jvasquez0687/Memory-Game/issues"
   },
-  "homepage": "https://github.com/jvasquez0687/Memory-Game"
+  "homepage":  "https://jvasquez0687.github.io/Memory-Game/"
 }
